log/build_2022-05-06_11-23-22/cam_client/stderr.log
  File "/app/dev_ws/install/cam_client/lib/python3.8/site-packages/cam_client/cam_client.py", line 102
    while len(lstCamTemp) < 1# self.cam_number:
                             ^
SyntaxError: invalid syntax

